--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,1 @@
-exchangeRateUrl=https://api.exchangeratesapi.io/latest?base={base}&symbols={symbols}
+exchangeRateUrl=http://mymockapi/latest?base={base}&symbols={symbols}
