Added config server client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ management.endpoint.health.show-details=always
 spring.jpa.hibernate.ddl-auto=none
 
 exchangeRateUrl=https://api.exchangeratesapi.io/latest?base={base}&symbols={symbols}
+
+spring.application.name=menu
+spring.cloud.config.uri=http://localhost:8888
