--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ exchangeRateUrl=https://api.exchangeratesapi.io/latest?base={base}&symbols={symb
 
 spring.application.name=menu
 spring.cloud.config.uri=http://localhost:8888
+
+spring.cloud.config.username=user
+spring.cloud.config.password=password
