Removed security config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8081
+
 management.endpoints.web.exposure.include=health,metrics,info
 management.endpoint.health.show-details=always
 
@@ -7,9 +9,6 @@ exchangeRateUrl=https://api.exchangeratesapi.io/latest?base={base}&symbols={symb
 
 spring.application.name=menu
 spring.cloud.config.uri=http://localhost:8888
-
-spring.cloud.config.username=user
-spring.cloud.config.password=password
 
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
